# 3d-printer-step-generator

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
examples/requests/: knight_parthenon_white.json
examples/steps/: knight_example.py  knight_example.step
infra/: app.py  cdk.json
infra/lambda/: Dockerfile  handler.py
infra/stacks/: api_stack.py
scripts/: fetch_resources.py
src/printforge/: __init__.py
src/printforge/cli/: main.py
src/printforge/core/: agent.py  build_loop.py  delivery.py  executor.py  order.py  profiles.py  prompt.py  providers.py  reference_search.py  registry.py  validation.py  vision.py
src/printforge/resources/: SOURCES.md  __init__.py  build123d_cheatsheet.md  cad_chess_masterclass.md  fdm_pla_constraints.md  staunton_knight_guide.md  step_stl_primer.md
src/printforge/workflows/chess/: engine.py  models.py  pieces.py  templates.py  themes.py
tests/: test_config_and_order.py  test_executor.py  test_workflow.py
